# cpp-todo-api

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  db.cpp  db.h  db.sqlite3  libs.txt  main.cpp  models.h  secret.key  tools.h  vcpkg.json
api/: todo.cpp  todo.h  user.h
controllers/: auth.h  auth.hpp  todo.h  todo.hpp  user.h  user.hpp
models/: todo.h  user.h
res/: config.xml
res/sql/todo/: getTodo.sql  getTodos.sql
res/sql/user/: changeUserRoleToAdmin.sql  createUserTable.sql  getUser.sql  getUsers.sql
sql/: createTodo.sql  createTodos.sql  deleteTodo.sql  getTodo.sql  initDB.sql  initTodo.sql
sql/todo/: createTodo.sql  createTodoTable.sql  deleteTodo.sql  getTodo.sql  getTodos.sql  updateTodo.sql
sql/user/: checkIfUserExists.sql  createUser.sql  createUserTable.sql  deleteUser.sql  getUser.sql  getUserByEmail.sql  getUsers.sql  updateUser.sql
src/: CMakeLists.txt  db.hpp  main.cpp  tools.h  tools.hpp
src/controllers/: auth-controller.hpp  auth.hpp  controller.hpp  todo-controller.hpp  todo.hpp  user-controller.hpp  user.hpp
src/models/: model.hpp  todo-model.hpp  todo.hpp  user-model.hpp  user.hpp
templates/: todo.html
